[metadata]
name = promise-client
summary = sample implimantation for OPNFV Promise Project
description-file = README.md
author = Masahito Muroi
home-page = http://github.com/muroi/promise
author-email = muroi.masahito@lab.ntt.co.jp

[files]
packages =
    promise

[entry_points]
console_scripts =
    promise = promise.main:main

promise.cli =
    reserve = promise.reservation:ReserveInstances
    associate = promise.association:AssociateProjects
    finish = promise.finish:FinishReservation
